Fix buttons overlap

--- a/util/topbar.css
+++ b/util/topbar.css
@@ -7,6 +7,8 @@
     padding: 10px;
     margin-right: 20px;
     margin-left: 20px;
+    margin-top: 0;
+    line-height: 400%;
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Chivo';font-size: 22px;
@@ -63,6 +65,7 @@
     padding: 23px;
     margin-right: 20px;
     margin-left: 20px;
+    line-height: 400%;
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Chivo';font-size: 22px;
